--- a/index.html
+++ b/index.html
@@ -181,7 +181,17 @@ const TILE_COUNT = GRID_COLS * GRID_ROWS;
 
 const sampleVideos = [
 
-"J3i3F2e4IYs","N_ZmHYF6-xM","cESaIUWoCJQ","5R6bBNnZgDE","1gFSDD12RP8","KE4YfuV-Nxw","k48e9GzcQVM","twQCZWBbcRE","twQCZWBbcRE","NteGUDYZ1nE","FW9Sqxb-4o","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","","",
+"J3i3F2e4IYs",
+"N_ZmHYF6-xM",
+"cESaIUWoCJQ",
+"5R6bBNnZgDE",
+"1gFSDD12RP8",
+"KE4YfuV-Nxw",
+"k48e9GzcQVM",
+"twQCZWBbcRE",
+"twQCZWBbcRE",
+"NteGUDYZ1nE",
+"FW9Sqxb-4o",
 
 ];
 
