--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
               tile.innerHTML = `
                 <div class="iframe-container">
                   <iframe
-                    src="https://www.youtube.com/embed/${youtubeId}?autoplay=1&mute=1"
+                    src="https://www.youtube.com/embed/${youtubeId}?autoplay=1"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen
                   ></iframe>
